Fix bug vì ổn định